# daily

./: .gitignore  README.md  test.js  test.md
Computer/CptNet/: ComputerNet.md  Net.md  计算机网络.md
Computer/Data/: data.md
Computer/NetSecurity/: 网络安全.md
Computer/Operate/: Operate.md
Computer/Organization/: Organization.md
English/: English.md
Japanese/: Japanese.md
JavaScript/: JS.md
Language/: English.md  Japanese.md
Language/c/: c.md  c_tool.md
Language/c++/: C++.md  MoreEffective.md  cmake.md
Language/c++/C++ 后端/: C++-Web 服务器框架.html  零声教育 第12代 课程体系.html
Language/c++/CUDA/: CUDA.md
Language/c++/Qt/: QML.md  Qt.md  ls-Qt课程体系.html
Language/c++/legend/: ~$$绘图1.~vsdx  绘图1.vsdx
Language/c++/linux网络编程/: linux网络编程.md
Language/c++/offer/: offer.md
Language/c++/program/: EPlayerDevLog.md
Language/c++/program/Eplayer/: CMakeLists.txt  EPlayerDevLog.md  main.cpp
Language/c++/program/Eplayer/DataBaseHelper/: DatabaseHelper.cpp  DatabaseHelper.h
Language/c++/program/Eplayer/include/: CServer.cpp  CServer.h  CThreadPool.h  Crypto.h  DatabaseHelper.h  EplayerServer.h  Epoll.h  Function.h  HttpParser.cpp  HttpParser.h  Logger.cpp  Logger.h  MultiProcess.h  MysqlClient.cpp  MysqlClient.h  Process.h  Public.h  SelfENV.h.in  Socket.h  Sqlite3Client.cpp  Sqlite3Client.h  Thread.cpp  Thread.h  ThreadPool.h  Utils.h  http_parser.c  http_parser.h
Language/c++/program/Eplayer/include/jsoncpp/: json_reader.cpp  json_tool.h  json_value.cpp  json_writer.cpp
Language/c++/program/Eplayer/src/process/: MultiProcess.cpp
Language/c++/program/RainWarn/: CMakeLists.txt  DataBS.cpp  Rain.cpp  ReadConfigInfo.cpp  Utils.cpp  config.xml  main.cpp
Language/c++/program/RainWarn/includes/: DataBS.h  Rain.h  ReadConfigInfo.h  SelfENV.h  Utils.h
Language/c++/program/RainWarn/src/: Rain.cpp
Language/c++/program/RainWarn/utils/: DataBS.cpp  Utils.cpp
Language/c++/program/RainWarn/utils/json/: CMakeLists.txt  JsonTrans.cpp
Language/c++/program/RainWarn/utils/json/dep/: jsoncpp.cpp
Language/c++/program/RainWarn/utils/xml/: CMakeLists.txt  ReadConfigInfo.cpp
Language/c++/program/RainWarn/utils/xml/dep/: Markup.cpp
Language/c/gate/: c笔试题.md  多进程.html  天晴了-解析.wps
Language/c/legend/: c.vsdx  ~$$c.~vsdx
Language/english/: English.md
Language/java/: java.md
Language/python/: Anaconda.md  Pyinstaller.md  Python.md
Language/python/django/: django.md
Language/python/scrapy/: scrapy.md
Life/: Badminton.md  Camera.md  IChing.md  Music.md  Running.md  Tennis.md  manual.md  swim.md  健身.md  应急救护.md  相术.md  租房.md  羽毛球.md
NLP/: 自然语言处理.md
Subversion/: Subversion.md
TypeScript/: typeScript.md
TypeScript/gate/: index.ts  webgis.html
TypeScript/gate/js/: ha.html  index.html  index.js
Vue/: Json.md  VueJS.md  XML.md  axios.vue
Vue/gate/example/: chatBody.html  start.html  window.html
Vue/gate/start/: package.json
ai/: 数据可视化.md  深度学习Tensorflow实践.md
ai/CUDA/: CUDA.md
ai/Detection/: Detection.md
ai/LLM/: Fine-tune.md  多模态.md  大模型Rag实践book.md
ai/TensorRT/: TensorRT.md
ai/TensorRT/gate/6.trt_basic/: CMakeLists.txt
ai/TensorRT/gate/6.trt_basic/model/: fc2.bias  mlp.engine
ai/TensorRT/gate/6.trt_basic/src/: runtime.cu
ai/TensorRT/gate/6.trt_basic/src_back/: mlp_veri.ipynb  runtime.cu
ai/TensorRT/gate/6.trt_basic/utils/: utils.cpp  utils.h
ai/atlas/: atlas.md
ai/deepstream/: deepstream.md
ai/gate/numpy/: 字符串函数.py
ai/gate/pandas/: 二维dataframe.py
ai/opencv/: opencv.md
ai/pytorch/: pytorch.md
ai/shouxieAI/: hard_decode_trt .md
ai/yolo/: yolo.md  yolov5.md  yolov8.md
ai/yolov5/: yolov5.md
algorithm/: 剑指offer.md  数据结构与算法.md
algorithm/gate/: test.js
algorithm/gate/python/: 0_n_Range1ShowTimes.py  bReplaceAdd.py  blockFind.py  strReplace.py
backEnd/pattern/: pattern.md
backEnd/pattern/gate/: test.js
backEnd/redis/: Redis.md
backEnd/spring/boot/: SpringBoot.md  senior.md
backEnd/spring/spring/: Spring.md
backEnd/sql/: mysql.md
bigData/: BigDataAnalyze.md  人工智能与模式识别.md  数据可视化.md  机器学习.md  深度学习Tensorflow实践.md
bigData/gate/numpy/: 切片与索引.py  创建矩阵.py  广播机制.py  排序函数.py  数组属性.py  数组改维.py  数组整形.py  数组连接.py  统计函数.py  翻转数组.py  迭代数组.py
bigData/gate/pandas/: 序列series.py
embed/MQTT/: MQTT.md
embed/MQTT/legend/: WEB25ef81539ff6766878d259f26bd9ef68
embed/ROS/: ROS.MD
embed/bsp/: BSP.md
embed/dirver/: Driver.md
embed/linux内核/: LDD.md  linux_kernel.md
embed/stm32/: stm32.md
frontEnd/: Antd.md  AntdPro.md  CSS.md  CSS.xmind  Echarts.md  HTML.md  HTML.xmind  JavaScript.md  React.md  Wechat.md  antv.md  frontEnd.md  markdown.md  基础学习路线.md
frontEnd/TypeScript/: typeScript.md
frontEnd/TypeScript/gate/: tsconfig.json
frontEnd/Vue/: VueJS.md
frontEnd/electron/: electron.md
frontEnd/node/: node.md
frontEnd/offer/: JavaScript.md
frontEnd/vite/: vite.md
frontEnd/webpack/gate/: package.json
gitHub/: github.md
java/: gate.md  java.md
linux/: ECS.md  Linux.md
node/: node.md
node/gate/: node3.js  node3_3.js  test.js
node/gate/Express/: package.json
node/gate/ExpressGen/: package-lock.json  package.json
node/gate/node包/: testPck.js
node/gate/path/: index.js
node/gate/命令行程序/: index.js  info.json  package-lock.json  ty.json
node/gate/文件系统/: index.js
node/gate/服务器/: index.js
offer/: JavaScript.md
office/: Axure.md  Excel.md  Outlook.md  Visio.md  Word.md
office/gate/RP/: entry.rp
office/gate/excel/: 基础.xlsx  查找引用技术.xlsx  透视表基础.xlsx  随机生成姓名.js  随机银行账号.js
office/gate/visio/: ~$$组织结构图.~vsdx  企业招聘流程.vsdx  数据选项.vsdx  超链接.vsdx  (+3 more)
pattern/: pattern.md
python/: Python.md
server/Subversion/: Subversion.md
server/docker/: docker.md
server/frp/: frp.md
server/gitHub/: Git.md  github.md
server/linux/: Linux.md  ubuntu.md
server/nginx/: nginx.md
server/windows/: windows.md
spring/boot/: SpringBoot.md  annotation.md  application.yml.md
sql/: mysql.md
streamMedia/: WebRTC.md  ffmpeg.md  stream.md
test/: postman.md
test/selenium/: selenium.md
tool/: Tool.md
webpack/: Webpack.md
webpack/gate/: package-lock.json
windows/: windows.md
work/: .~orklog.docx  worklog.docx
(+811 files in other folders)
